Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,25 +1,25 @@
 {
-  "store_id": 42162,
-  "name": "sophiarosa",
   "domain": "sophiarosa.netlify.app",
-  "short_name": "sophiarosa",
-  "description": "sophiarosa",
-  "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
+  "currency_symbol": "R$",
+  "primary_color": "#dfc5c9",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "logo": "/img/uploads/1646688889350-rosatel.jpg",
+  "name": "SHOPIA ROSA BOUTIQUE",
+  "short_name": "sophiarosa",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/1646688889350-rosatel.jpg",
   "icons_font": "_",
-  "font_family": "_"
+  "country_code": "BR",
+  "secondary_color": "#737373",
+  "icon": "/img/uploads/1646688889350-rosatel.jpg",
+  "store_id": 42162,
+  "description": "sophiarosa",
+  "large_icon": "/img/uploads/1646688889350-rosatel.jpg"
 }
