chore: update config

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,6 @@
 {
-  "domain": "sophiarosa.netlify.app",
+  "domain": "sophiarosa.com.br",
+  "repository": "ecomplus-stores/sophiarosa",
   "currency_symbol": "R$",
   "primary_color": "#dfc5c9",
   "theme": {
